recursion.cons.lessons.recursion.cons.AllDifferent.scala.error
allDifferent:9: error: not found: type int
def isMember(l:List[int], v:int):Boolean= {
                    ^allDifferent:9: error: not found: type int
def isMember(l:List[int], v:int):Boolean= {
                            ^